tests/paczka1/small_fuzzy/51767578.err
Error in line 1: yekg7XjZeq A161 33,0
Error in line 3: yekg7XjZeq A649 91,6
Error in line 7: F5tI A524 45,9
